# 2025-1A-T06-ES11-G02

./: README.md  setup.py
.github/workflows/: ci.yml
docs/: Analise_Exploratoria.md  GestaoProjeto.md  Projeto_Gestao_Governanca_Dados.md  Solucao_DataApp.md  Template_Projeto_Gestao_Governanca_Dados.md
src/: .gitignore  pyproject.toml
src/AEA - Visualizações/: .gitignore  artefato_semana1_falhas.Rmd  artefato_semana1_resultados.Rmd  artefato_semana1_status.Rmd  artefato_semana1_veiculos.Rmd
src/API/: .dockerignore  .gitignore  Dockerfile  __init__.py  fly.toml  main.py  requirements.txt
src/data_ingestion/: .gitignore  main_consumer.py  main_producer.py  pyproject.toml
src/data_ingestion/clickhouse/: clickhouse_connection.py  clickhouse_handler.py
src/data_ingestion/config/: settings.py
src/data_ingestion/consumer/: consumer.py  message_handler.py  process_handler.py  rabbit_handler.py
src/data_ingestion/envio_bronze/: bronze_handler.py
src/data_ingestion/envio_gold/: data_formatter.py  gold_handler.py
src/data_ingestion/envio_prata/: prata_handler.py
src/data_ingestion/logger/: logger.py
src/data_ingestion/producer/: csv_handler.py  producer.py  rabbit_handler.py
src/data_ingestion/rabbit_mq/: connection.py
src/data_ingestion/tests/: test_conexaorabbit.py  test_consumer.py  test_envio_bronze.py  test_envio_gold.py  test_envio_prata.py  test_logger.py  test_producer.py
src/frontend/: Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.js
src/manual_ingestion/: manual_ingestion.py  manual_ingestion_api.py
(+33 files in other folders)
