[tool.poetry]
name = "motor-dados"
version = "0.1.0"
description = "Pipeline simples de ingestão via RabbitMQ e Supabase"
authors = ["Seu Nome <seu.email@exemplo.com>"]

# Defina corretamente as pastas que contêm o código
packages = [{include = "consumer"}, {include = "producer"}, {include = "rabbit_mq"}, {include = "logger"}, {include = "config"}]

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<4.0"
pika = "^1.3.2"  # Cliente RabbitMQ
supabase = "^2.13.0"  # Cliente Supabase
python-dotenv = "^1.0.1"  # Carregar variáveis de ambiente
faker = "^36.1.0"
clickhouse-connect = "^0.8.15"
pandas = "^2.2.3"
cryptography-fernet = "^0.1.0"
cryptography = "^44.0.1"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"  # Para testes automatizados

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
